Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,18 +1,17 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "7643434714:AAGSY7KBTwfDibSUeVkmXdlXW6nr7L3sLBQ"                              # Require restart after changing it while bot running
+OWNER_ID = "5756495153"                               # Require restart after changing it while bot running
+TELEGRAM_API = "29483517"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "e35a05d338376cbcd8162f810aed878d"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://user1:abhinai.2244@cluster0.7oaqx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1002687686168"                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
@@ -23,8 +22,8 @@ INCOMPLETE_TASK_NOTIFIER = "False"
 SET_COMMANDS = "False"
 EXTENSION_FILTER = ""
 YT_DLP_OPTIONS = ""
-FSUB_IDS = ""
-BOT_PM = ""
+FSUB_IDS = "-1002609169260"
+BOT_PM = "True"
 
 # GDrive Tools
 GDRIVE_ID = ""
@@ -72,9 +71,9 @@ MIRROR_FILENAME_SUFFIX = ""
 MIRROR_FILENAME_REMNAME = ""
 
 # Log Channel/SuperGroup (Topics Support)
-LEECH_LOG_ID = ""
-MIRROR_LOG_ID = ""
-LINKS_LOG_ID = ""
+LEECH_LOG_ID = "-1002492759126"
+MIRROR_LOG_ID = "-1002492759126"
+LINKS_LOG_ID = "-1002524772536"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
@@ -96,20 +95,20 @@ MEGA_EMAIL = ""
 MEGA_PASSWORD = ""
 
 # Limits
-DAILY_TASK_LIMIT = ""
+DAILY_TASK_LIMIT = "40"
 DAILY_MIRROR_LIMIT = ""
-DAILY_LEECH_LIMIT = ""
-USER_MAX_TASKS = ""
-BOT_MAX_TASKS = ""
+DAILY_LEECH_LIMIT = "30"
+USER_MAX_TASKS = "10"
+BOT_MAX_TASKS = "10"
 TORRENT_LIMIT= ""
 DIRECT_LIMIT = ""
 GDRIVE_LIMIT = ""
 CLONE_LIMIT = ""
 YTDLP_LIMIT = ""
 PLAYLIST_LIMIT = ""
-LEECH_LIMIT = ""
+LEECH_LIMIT = "40"
 MEGA_LIMIT = ""
-STORAGE_THRESHOLD = ""
+STORAGE_THRESHOLD = "40"
 USER_TIME_INTERVAL = "0"
 
 # Templates
@@ -118,9 +117,9 @@ IMDB_TEMPLATE = ""
 MDL_TEMPLATE = ""
 
 # Telegraph
-TITLE_NAME = "WZ-M/L-X"
-AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "https://t.me/WZML_X"
+TITLE_NAME = "@clutch008"
+AUTHOR_NAME = "ABHI"
+AUTHOR_URL = "https://t.me/clutch008"
 COVER_IMAGE = ""
 
 # Extra
